package com.design.pattern.adapter.extend;

/**
 * 假设 DirectCurrent 是接口。
 *
 * @author hf huminxi2017@gmail.com
 * @version on 2018/12/10 14:06
 */
public interface DirectCurrent {
    public abstract void use12V();
}
