@startuml
title: adapter-extends

interface DirectCurrent
class AlternateCurrent
class AlternateToDirect
class Main

AlternateToDirect ..|> DirectCurrent : implements >
AlternateCurrent <|-- AlternateToDirect : < extends
Main -> DirectCurrent : Use

DirectCurrent : use12V()
AlternateToDirect : use12V()
AlternateCurrent : use220V()



@enduml